Bug fix assessheader spacing, menubutton off screen

--- a/assess2/vue-src/src/assess2.css
+++ b/assess2/vue-src/src/assess2.css
@@ -278,6 +278,11 @@ input[type=radio], input[type=checkbox] {
 .flexrow.wrap {
   flex-flow: row wrap;
 }
+.flexgroup {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+}
 .scrollpane {
   width: 100%;
   overflow-x: auto;
